@@ -2,6 +2,7 @@ useDynLib(RcppExamples)
 
 export(RcppExample,
        print.RcppExample,
+       RcppDataFrame,
        RcppDateExample,
        RcppParamsExample,
        RcppVectorExample,
